# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yaml
page_analyzer/: app.py  data.py  finder.py  parser.py  url.py
page_analyzer/templates/: all_urls.html  base.html  error.html  index.html  list_of_urls.html  show.html
tests/: test_app.py  test_finder.py  test_parsers.py  test_url.py
